--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </h1>
         </div>
         <!-- tabsection -->
-        <div class="container mx-auto flex items-center justify-center gap-4" id="tabContainer">
+        <div class="container mx-auto flex flex-wrap items-center justify-center gap-2 py-10" id="tabContainer">
 
             <a class="btn my-2"><i class="fa-solid fa-book"></i> Learn</a>
         </div>
